--- a/css/spmbio.css
+++ b/css/spmbio.css
@@ -5,15 +5,20 @@ body{
 h1,h2{
 	text-align: center;
 	font-family: helvetica;
+	font-size: 50px;
 }
 p{
 	font-family: Arial;
-	font-size: 20px;
+	font-size: 40px;
+	text-align:center;
+	padding-left: 50px;
+	padding-right: 50px;
 }
 
 ol,ul{
 	font-family: 30px;
-	font-size: 25px
+	font-size: 50px;
+	padding-left: 500px;
 }
 header{
 	background-color: white;
@@ -27,8 +32,8 @@ header h1{
 	font-family: 'Arial';
 }
 header img{
-	max-width: 800px;
-
+  	width: 60%;
+  	height: 50%;
 }
 
 main{
@@ -38,7 +43,7 @@ main{
 }
 
 main img{
-	max-width: 800px;
-	padding-top: 5px;
-	padding-bottom: 5px;
+ 	 width: 60%;
+  	height: 50%;
+  	padding-left: 500px;
 }
