--- a/css/spmbio.css
+++ b/css/spmbio.css
@@ -1,30 +1,33 @@
 body{
 	margin: 0;
-	background-color: white;
+	background-color: black;
 }
 h1,h2{
 	text-align: center;
 	font-family: helvetica;
-	font-size: 50px;
+	font-size: 70px;
+	color: white;
 }
 p{
 	font-family: Arial;
-	font-size: 40px;
+	font-size: 100px;
 	text-align:center;
 	padding-left: 50px;
 	padding-right: 50px;
+	color: white;
 }
 
 ol,ul{
 	font-family: 30px;
-	font-size: 50px;
+	font-size: 100px;
 	padding-left: 500px;
+	color: white;
 }
 header{
-	background-color: white;
 	text-align: center;
 	padding-top: 5px;
 	padding-bottom: 5px;
+	color: white;
 }
 
 header h1{
@@ -32,6 +35,8 @@ header h1{
 	font-family: 'Arial';
 }
 header img{
+  	width: 60%;
+  	height: 50%;
   	width: 60%;
   	height: 50%;
 }
@@ -43,7 +48,8 @@ main{
 }
 
 main img{
- 	 width: 60%;
+	width: 70%;
   	height: 50%;
-  	padding-left: 500px;
+  	margin-left:1000px;
+  	margin-right:1000px;
 }
